--- a/template/accordion/accordion-group.html
+++ b/template/accordion/accordion-group.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-class="{ 'selected': isOpen }">
   <div class="panel-heading">
     <h4 class="panel-title">
       <a class="accordion-toggle" ng-click="toggleOpen()" accordion-transclude="heading"><span ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
